# overlay

./: .gitignore  pyproject.toml
src/: Debug_RGB_Correspondences.txt  debug_cam_tilt.py  debug_comp_normal_vec.py  debug_overlay_prototype.py  debug_plane.py  debug_pose_ippe.py  debug_pose_ippe_handeye.py  debug_res_pose1.py  debug_sidebar.py  res_disambiguation_cam.py  xray_marker_selection_debug_uv.npz
src/debug_snapshots/: plane_snapshot_kf_debug_kosy.npz  plane_snapshot_kf_debug_or.npz  plane_snapshot_kf_table_center.npz  plane_snapshot_kf_table_left.npz  plane_snapshot_kf_table_right.npz  uv_debug_kosy.npz  uv_debug_or.npz  uv_debug_table.npz  uv_debug_val.npz  xray_marker_selection_debug_uv.npz
src/overlay/calib/: calib_camera.py  calib_camera_to_pointer.py  calib_camera_to_pointer_ALT.py  calib_camera_to_pointer_V1.py  calib_camera_to_xray.py  calib_camera_to_xray_ALT.py  calib_camera_to_xray_handeye.py  calib_xray_intrinsics.py  calib_xray_to_pointer.py  calib_xray_to_pointer_V1.py  calibration_camera.py  calibration_camera_to_xray.py  camera_to_xray.py
src/overlay/debug/: IMG1_PCB.XA.1.1.2026.03.27.13.36.01.343750.1944171.IMA  T_cx_debug.npz  T_cx_debug_new.npz  debug_cam2X.py  debug_cam_cosy.py  debug_cam_kosy.py  debug_cam_warp_perspective.py  debug_correspondences.py  debug_depth.py  (+43 more)
src/overlay/tracking/hydramarker/cpp/: CMakeLists.txt  bindings.cpp  checkerboard_detector.cpp  checkerboard_detector.hpp  dot_detector.cpp  dot_detector.hpp  example.cpp  marker_field.cpp  marker_field.hpp
src/overlay/tracking/hydramarker/cpp/upstream/: README.md
(+74 files in other folders)
